--- a/clash_baserule.yml
+++ b/clash_baserule.yml
@@ -12,7 +12,7 @@ dns:
     use-hosts: true
     nameserver: ['https://cloudflare-dns.com/dns-query']
     fallback: ['https://dns.google/dns-query']
-    fallback-filter: { geoip: true, ipcidr: [240.0.0.0/4] }
+    fallback-filter: { geoip: true, geoip-code: CN, ipcidr: [240.0.0.0/4] }
 
 proxies:
     ----lPROXIES----
