--- a/clash_baserule.yml
+++ b/clash_baserule.yml
@@ -18,15 +18,15 @@ proxies:
     ----lPROXIES----
 
 proxy-groups:
-    - { name: '🇺🇳全局出国节点', type: select, proxies: ['♾️自动出国节点', DIRECT, ----lPROXIESNAME----], url: 'http://www.gstatic.com/generate_204', lazy: true, timeout: 5, interval: 900 }
-    - { name: '🇨🇳全局回国节点', type: select, proxies: [DIRECT, ----lPROXIESNAME_CN----], url: 'http://baidu.com', lazy: true, timeout: 5, interval: 900 }
-    - { name: '♾️自动出国节点', type: url-test, proxies: [----lPROXIESNAME_AUTO----], url: 'http://www.gstatic.com/generate_204', lazy: true, timeout: 5, interval: 900, tolerance: 300 }
-    - { name: '🇺🇳海外被墙网站', type: select, proxies: ['🇺🇳全局出国节点', DIRECT, '♾️自动出国节点', ----lPROXIESNAME----], url: 'http://www.gstatic.com/generate_204', lazy: true, timeout: 5, interval: 900 }
-    - { name: '⚓️其它海外流量', type: select, proxies: ['🇺🇳全局出国节点', DIRECT, '♾️自动出国节点', ----lPROXIESNAME----], url: 'http://www.gstatic.com/generate_204', lazy: true, timeout: 5, interval: 900 }
-    - { name: '🇺🇳海外流媒体', type: select, proxies: ['🇺🇳全局出国节点', DIRECT, '♾️自动出国节点', ----lPROXIESNAME----], url: 'http://www.gstatic.com/generate_204', lazy: true, timeout: 5, interval: 900 }
-    - { name: '🇨🇳国内全局', type: select, proxies: [DIRECT, '🇨🇳全局回国节点'] }
-    - { name: '🇨🇳国内流媒体', type: select, proxies: [DIRECT, '🇨🇳全局回国节点'] }
-    - { name: '🇨🇳IP属地分流', type: select, proxies: [DIRECT, '🇨🇳全局回国节点', '♾️自动出国节点', ----lPROXIESNAME----], url: 'http://www.gstatic.com/generate_204', lazy: true, timeout: 5, interval: 900 }
+    - { name: '🇺🇳全局出国节点', type: 'select', proxies: ['♾️自动出国节点', DIRECT, ----lPROXIESNAME----], lazy: true, interval: 900, timeout: 5, benchmark-timeout: 5, url: 'http://www.gstatic.com/generate_204', benchmark-url: 'http://www.gstatic.com/generate_204' }
+    - { name: '🇨🇳全局回国节点', type: 'select', proxies: [DIRECT, ----lPROXIESNAME_CN----], lazy: true, interval: 900, timeout: 5, benchmark-timeout: 5, url: 'http://baidu.com', benchmark-url: 'http://baidu.com' }
+    - { name: '♾️自动出国节点', type: 'url-test', proxies: [----lPROXIESNAME_AUTO----], lazy: true, interval: 900, tolerance: 300, timeout: 5, benchmark-timeout: 5, url: 'http://www.gstatic.com/generate_204', benchmark-url: 'http://www.gstatic.com/generate_204' }
+    - { name: '🇺🇳海外被墙网站', type: 'select', proxies: ['🇺🇳全局出国节点', DIRECT, '♾️自动出国节点', ----lPROXIESNAME----], lazy: true, interval: 900, timeout: 5, benchmark-timeout: 5, url: 'http://www.gstatic.com/generate_204', benchmark-url: 'http://www.gstatic.com/generate_204' }
+    - { name: '⚓️其它海外流量', type: 'select', proxies: ['🇺🇳全局出国节点', DIRECT, '♾️自动出国节点', ----lPROXIESNAME----], lazy: true, interval: 900, timeout: 5, benchmark-timeout: 5, url: 'http://www.gstatic.com/generate_204', benchmark-url: 'http://www.gstatic.com/generate_204' }
+    - { name: '🇺🇳海外流媒体', type: 'select', proxies: ['🇺🇳全局出国节点', DIRECT, '♾️自动出国节点', ----lPROXIESNAME----], lazy: true, interval: 900, timeout: 5, benchmark-timeout: 5, url: 'http://www.gstatic.com/generate_204', benchmark-url: 'http://www.gstatic.com/generate_204' }
+    - { name: '🇨🇳国内全局', type: 'select', proxies: [DIRECT, '🇨🇳全局回国节点'], lazy: true, interval: 900, timeout: 5, benchmark-timeout: 5, url: 'http://baidu.com', benchmark-url: 'http://baidu.com' }
+    - { name: '🇨🇳国内流媒体', type: 'select', proxies: [DIRECT, '🇨🇳全局回国节点'], lazy: true, interval: 900, timeout: 5, benchmark-timeout: 5, url: 'http://baidu.com', benchmark-url: 'http://baidu.com' }
+    - { name: '🇨🇳IP属地分流', type: 'select', proxies: [DIRECT, '🇨🇳全局回国节点', '🇺🇳全局出国节点', '♾️自动出国节点', ----lPROXIESNAME----], lazy: true, interval: 900, timeout: 5, benchmark-timeout: 5, url: 'http://baidu.com', benchmark-url: 'http://baidu.com' }
 
 rules:
     #- 'DST-PORT,22,DIRECT'
