--- a/clash_baserule.yml
+++ b/clash_baserule.yml
@@ -1,6 +1,6 @@
 mixed-port: 7890
-allow-lan: false
-bind-address: '*'
+allow-lan: ----lAllowLAN----
+bind-address: ----lBindAddress----
 mode: rule
 log-level: warning
 external-controller: '127.0.0.1:9090'
