--- a/clash_baserule.yml
+++ b/clash_baserule.yml
@@ -267,6 +267,32 @@ rules:
     - 'IP-ASN,20473,🇺🇳海外被墙网站,no-resolve' # Stash
     - 'IP-ASN,20473,🇺🇳海外被墙网站,no-resolve' # Meta
 
+    # WeChat
+    - 'DOMAIN,apd-pcdnwxlogin.teg.tencent-cloud.net,DIRECT'
+    - 'DOMAIN,slife.xy-asia.com,DIRECT'
+    - 'DOMAIN-SUFFIX,iot-tencent.com,DIRECT'
+    - 'DOMAIN-SUFFIX,lbs.gtimg.com,DIRECT'
+    - 'DOMAIN-SUFFIX,qlogo.cn,DIRECT'
+    - 'DOMAIN-SUFFIX,qpic.cn,DIRECT'
+    - 'DOMAIN-SUFFIX,servicewechat.com,DIRECT'
+    - 'DOMAIN-SUFFIX,tenpay.com,DIRECT'
+    - 'DOMAIN-SUFFIX,up-hl.3g.qq.com,DIRECT'
+    - 'DOMAIN-SUFFIX,vweixinthumb.tc.qq.com,DIRECT'
+    - 'DOMAIN-SUFFIX,wechat.com,DIRECT'
+    - 'DOMAIN-SUFFIX,wechatlegal.net,DIRECT'
+    - 'DOMAIN-SUFFIX,wechatos.net,DIRECT'
+    - 'DOMAIN-SUFFIX,wechatpay.com,DIRECT'
+    - 'DOMAIN-SUFFIX,weixin.com,DIRECT'
+    - 'DOMAIN-SUFFIX,weixin.qq.com,DIRECT'
+    - 'DOMAIN-SUFFIX,weixinbridge.com,DIRECT'
+    - 'DOMAIN-SUFFIX,weixinsxy.com,DIRECT'
+    - 'DOMAIN-SUFFIX,wx.gtimg.com,DIRECT'
+    - 'DOMAIN-SUFFIX,wx.qq.com,DIRECT'
+    - 'DOMAIN-SUFFIX,wxapp.tc.qq.com,DIRECT'
+    - 'DOMAIN-SUFFIX,wxs.qq.com,DIRECT'
+    - 'DOMAIN-SUFFIX,yun-hl.3g.qq.com,DIRECT'
+    - 'IP-ASN,132203,DIRECT,no-resolve'
+
     # PUBG: New State
     - 'DOMAIN-SUFFIX,sendbird.com,🇺🇳海外被墙网站'
     - 'DST-PORT,5000,🇺🇳海外被墙网站'
@@ -1152,6 +1178,7 @@ rules:
     - 'DOMAIN,szshort.weixin.qq.com,🇨🇳IP属地分流'
     - 'DOMAIN,zhihu-web-analytics.zhihu.com,🇨🇳IP属地分流'
     - 'DOMAIN,api.zhihu.com,🇨🇳IP属地分流'
+    - 'DOMAIN-SUFFIX,qq.com,DIRECT'
     - 'DOMAIN-SUFFIX,gjfzpt.cn,REJECT'
     - 'DOMAIN-KEYWORD,core-c-lq,🇨🇳IP属地分流'
     - 'DOMAIN-KEYWORD,core-lq,🇨🇳IP属地分流'
