--- a/clash_baserule.yml
+++ b/clash_baserule.yml
@@ -293,6 +293,31 @@ rules:
     - 'DOMAIN-SUFFIX,yun-hl.3g.qq.com,DIRECT'
     - 'IP-ASN,132203,DIRECT,no-resolve'
 
+    # Mihoyo
+    - 'DOMAIN-SUFFIX,genshinimpact.com,DIRECT'
+    - 'DOMAIN-SUFFIX,honkaiimpact3.com,DIRECT'
+    - 'DOMAIN-SUFFIX,honkaistarrail.com,DIRECT'
+    - 'DOMAIN-SUFFIX,hoyo.link,DIRECT'
+    - 'DOMAIN-SUFFIX,hoyolab.com,DIRECT'
+    - 'DOMAIN-SUFFIX,hoyoverse.com,DIRECT'
+    - 'DOMAIN-SUFFIX,n0vadesktop.com,DIRECT'
+    - 'DOMAIN-SUFFIX,zenlesszonezero.com,DIRECT'
+    - 'DOMAIN-SUFFIX,mhystatic.com,DIRECT'
+    - 'DOMAIN-SUFFIX,mhyurl.cn,DIRECT'
+    - 'DOMAIN-SUFFIX,mihayo.com,DIRECT'
+    - 'DOMAIN-SUFFIX,mihayou.com,DIRECT'
+    - 'DOMAIN-SUFFIX,mihoyo.com,DIRECT'
+    - 'DOMAIN-SUFFIX,mihoyocg.com,DIRECT'
+    - 'DOMAIN-SUFFIX,mihoyogift.com,DIRECT'
+    - 'DOMAIN-SUFFIX,mihoyomall.com,DIRECT'
+    - 'DOMAIN-SUFFIX,miyoushe.com,DIRECT'
+    - 'DOMAIN-SUFFIX,benghuai.com,DIRECT'
+    - 'DOMAIN-SUFFIX,bh3.com,DIRECT'
+    - 'DOMAIN-SUFFIX,bhsr.com,DIRECT'
+    - 'DOMAIN-SUFFIX,themisweeps.com,DIRECT'
+    - 'DOMAIN-SUFFIX,yuanshen.com,DIRECT'
+    - 'DOMAIN-SUFFIX,juequling.com,DIRECT'
+
     # PUBG: New State
     - 'DOMAIN-SUFFIX,sendbird.com,🇺🇳海外被墙网站'
     - 'DST-PORT,5000,🇺🇳海外被墙网站'
