--- a/clash_baserule.yml
+++ b/clash_baserule.yml
@@ -21,7 +21,7 @@ dns:
     nameserver: ['system']
     udp-nameserver: ['system']
     default-nameserver: ['119.29.29.29']
-    #fallback: ['https://dns.google/dns-query']
+    #fallback: ['https://doh.pub/dns-query', 'https://dns.alidns.com/dns-query']
     #fallback-filter: { geoip: true, geoip-code: 'CN', ipcidr: ['240.0.0.0/4'] }
 
 sniffer:
@@ -1175,15 +1175,20 @@ rules:
     - 'IP-CIDR,54.173.34.141/32,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,54.235.23.242/32,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,169.45.248.118/32,🇺🇳海外被墙网站,no-resolve'
+    - 'IP-CIDR,91.105.192.0/23,🇺🇳海外被墙网站,no-resolve'
+    - 'IP-CIDR,91.108.56.0/22,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,91.108.4.0/22,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,91.108.8.0/22,🇺🇳海外被墙网站,no-resolve'
-    - 'IP-CIDR,91.108.12.0/22,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,91.108.16.0/22,🇺🇳海外被墙网站,no-resolve'
-    - 'IP-CIDR,91.108.56.0/22,🇺🇳海外被墙网站,no-resolve'
+    - 'IP-CIDR,91.108.12.0/22,🇺🇳海外被墙网站,no-resolve'
+    - 'IP-CIDR,91.108.20.0/22,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,149.154.160.0/20,🇺🇳海外被墙网站,no-resolve'
+    - 'IP-CIDR,185.76.151.0/24,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,2001:b28:f23d::/48,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,2001:b28:f23f::/48,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,2001:67c:4e8::/48,🇺🇳海外被墙网站,no-resolve'
+    - 'IP-CIDR,2001:b28:f23c::/48,🇺🇳海外被墙网站,no-resolve'
+    - 'IP-CIDR,2a0a:f280::/32,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,103.2.30.0/23,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,125.209.208.0/20,🇺🇳海外被墙网站,no-resolve'
     - 'IP-CIDR,147.92.128.0/17,🇺🇳海外被墙网站,no-resolve'
