--- a/clash_baserule.yml
+++ b/clash_baserule.yml
@@ -36,7 +36,7 @@ sniffer:
         - 'Mijia Cloud'
 
 tun:
-    enable: false
+    enable: ----lEnableTUN----
     gso: true
     auto-route: true
     auto-detect-interface: true
