Bug fix & Allow multi reqFeat

--- a/clash_baserule.yml
+++ b/clash_baserule.yml
@@ -53,11 +53,11 @@ tun:
         - '192.168.0.0/16'
         - 'fc00::/7'
         - 'fe80::/10'
-        - '17.0.0.0/8'
-        - '2a01:b747::/32'
-        - '2a01:b740::/32'
-        - '2620:149::/32'
-        - '2403:300::/32'
+        - '17.0.0.0/8' # feat:!AppleAI
+        - '2a01:b747::/32' # feat:!AppleAI
+        - '2a01:b740::/32' # feat:!AppleAI
+        - '2620:149::/32' # feat:!AppleAI
+        - '2403:300::/32' # feat:!AppleAI
 
 proxies:
     ----lPROXIES----
